Create application-env.template.yml and remove environment configuration from application.yml

--- a/.gitignore
+++ b/.gitignore
@@ -100,3 +100,6 @@ gradle-app.setting
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
 
+# Environment
+application-*.yml
+!application-env.template.yml
